--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="profile">
 
     <div class="profile-img">
-      <img src="./assets/images/avatar-jessica.jpeg" alt="">
+      <img src="./assets/images/avatar-jessica.jpeg" alt="profile image">
     </div>
     <div class="profile-info">
       <span>Jessica Randall</span>
